--- a/szabalyozok/templates/szabalyozok/kep_new.html
+++ b/szabalyozok/templates/szabalyozok/kep_new.html
@@ -3,9 +3,9 @@
 
 {% block content %}
 
-<h3 style="margin-left:40px;">Kép feltöltése</h3><br>
+<h3 style="margin-left:20px;">Kép feltöltése</h3><br>
 
-<div style="margin-left:40px;" class="col-md-6">
+<div class="col-md-4">
     {% load bootstrap3 %}
     <form method="POST" class="form-horizontal" enctype="multipart/form-data">
         {% csrf_token %}
