--- a/szabalyozok/templates/szabalyozok/layout.html
+++ b/szabalyozok/templates/szabalyozok/layout.html
@@ -54,13 +54,13 @@
                         <li><a href="{% url 'riport_szabmunkak' %}">Szabályozó munkák</a></li>
                         <li><a href="{% url 'riport_muszermunkak' %}">Műszer munkák</a></li>
                         <li role="separator" class="divider"></li> -->
-                        <li><a href="{% url 'riport_szabalyozok_api' %}">Szabályozók riport</a></li>
-                        <li><a href="{% url 'riport_szabtartozekok_api' %}">Tartozékok riport</a></li>
-                        <li><a href="{% url 'riport_muszerek_api' %}">Műszerek riport</a></li>
-                        <li><a href="{% url 'riport_diagnosztika_api' %}">Beszabályozások riport</a></li>
+                        <li><a href="{% url 'riport_szabalyozok' %}">Szabályozók riport</a></li>
+                        <li><a href="{% url 'riport_szabtartozekok' %}">Tartozékok riport</a></li>
+                        <li><a href="{% url 'riport_muszerek' %}">Műszerek riport</a></li>
+                        <li><a href="{% url 'riport_diagnosztika' %}">Beszabályozások riport</a></li>
                         <li role="separator" class="divider"></li>
-                        <li><a href="{% url 'riport_szabmunkak_api' %}">Szabályozó munkák riport</a></li>
-                        <li><a href="{% url 'riport_muszermunkak_api' %}">Műszer munkák riport</a></li>
+                        <li><a href="{% url 'riport_szabmunkak' %}">Szabályozó munkák riport</a></li>
+                        <li><a href="{% url 'riport_muszermunkak' %}">Műszer munkák riport</a></li>
                         <li role="separator" class="divider"></li>
                         <li><a href="{% url 'riport_szabingatlan' %}">Szab. ingatlan riport</a></li>
                         <li role="separator" class="divider"></li>
