--- a/szabalyozok/templates/szabalyozok/szabmunkak_new.html
+++ b/szabalyozok/templates/szabalyozok/szabmunkak_new.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <h3 style="margin-left:40px;">Szabályozó munka létrehozása</h3><br>
-<div style="margin-left:40px;" class="col-md-8">
+<div class="col-md-10">
 {% load widget_tweaks %}
     <form method="POST" class="form-horizontal" role="form">
         {% csrf_token %}
