--- a/szabalyozok/templates/szabalyozok/diagnosztika_new.html
+++ b/szabalyozok/templates/szabalyozok/diagnosztika_new.html
@@ -5,7 +5,7 @@
 
 <h3 style="margin-left:40px;">Új beszabályozás létrehozása (bar)</h3><br>
 
-<div style="margin-left:40px;" class="col-md-6">
+<div class="col-md-8">
     {% load bootstrap3 %}
     <form method="POST" class="form-horizontal" role="form">
         {% csrf_token %}
