--- a/szabalyozok/templates/szabalyozok/riport_muszermunkak.html
+++ b/szabalyozok/templates/szabalyozok/riport_muszermunkak.html
@@ -1,49 +1,129 @@
 {% extends "szabalyozok/riport_layout.html" %}
 
 {% block content %}
-<h1>Műszer munkák</h1>
+<span style="margin-left:20px;">Műszer munkák riport</span>
+    <div class="apply-filter-option">
+        <div id="useFilterApplyButton"></div>
+    </div>
+    <div style="height: 85%;" id="gridContainer"></div>
+    <div class="options">
+        <div>
+            <div id="filterRow"></div>
+        </div>
+        <div>
+            <div id="headerFilter"></div>
+        </div>
+    </div>
+<script>
+var muszermunkak = {{muszermunkak|safe}};
 
-<table id="riport" class="table table-bordered" cellspacing="0" width="100%">
-    <thead>
-    <tr>
-        <th>Műszer fajta</th>
-        <th>Műszer gyártó</th>
-        <th>Műszer típus</th>
-        <th>Gyáriszám</th>
-        <th>Munkatípus</th>
-        <th>Időpont</th>
-        <th>Megjegyzes</th>
-        <th>Műszer azon</th>
-        <th>Dokumentumok</th>
-    </tr>
-    </thead>
-    <tfoot>
-    <tr>
-        <th>Műszer fajta</th>
-        <th>Műszer gyártó</th>
-        <th>Műszer típus</th>
-        <th>Gyáriszám</th>
-        <th>Munkatípus</th>
-        <th>Időpont</th>
-        <th>Megjegyzes</th>
-        <th>Műszer azon</th>
-        <th>Dokumentumok</th>
-    </tr>
-    <tfoot>
-    <tbody>
-    {% for munka in muszermunkak %}
-    <tr>
-        <td>{{ munka.muszerfajta }}</td>
-        <td>{{ munka.muszergyarto }}</td>
-        <td>{{ munka.muszertipus }}</td>
-        <td>{{ munka.gyariszam }}</td>
-        <td>{{ munka.muszermunkatipus }}</td>
-        <td>{{ munka.muszmunka_datum }}</td>
-        <td>{{ munka.megjegyzes }}</td>
-        <td>{{ munka.muszer_id }}</td>
-        <td><a href="{% url 'simple_doc_list' tip='muszermunkak' eszid=munka.id %}">Dokumentumok</a></td>
-    </tr>
-    {% endfor %}
-    </tbody>
-</table>
+$(function(){
+    var dataGrid = $("#gridContainer").dxDataGrid({
+        dataSource: muszermunkak,
+        key: 'id',
+        allowColumnResizing: true,
+       loadPanel: {
+            enabled: true
+        },
+        scrolling: {
+            mode: 'virtual'
+        },
+        columnFixing: {
+            enabled: true
+        },
+        selection: {
+            mode: "multiple"
+        },
+        "export": {
+            enabled: true,
+            fileName: "Műszer munkák riport",
+            allowExportSelectedData: true
+        },
+        filterRow: {
+            visible: true,
+            applyFilter: "auto"
+        },
+        searchPanel: {
+            visible: true,
+            width: 240,
+            placeholder: "Műszermunka keresés..."
+        },
+        headerFilter: {
+            visible: true
+        },
+        columns: [
+        {
+            dataField: "muszerfajta",
+			width: 250,
+            caption: "Műszerfajta",
+            dataType: "string",
+        },
+        {
+            dataField: "muszergyarto",
+            width: 200,
+            caption: "Műszergyártó",
+        },
+        {
+            dataField: "muszertipus",
+            width: 200,
+            caption: "Műszertipus",
+        },
+        {
+            dataField: "gyariszam",
+            width: 150,
+            caption: "Gyáriszám",
+        },
+        {
+            dataField: "muszermunkatipus",
+            width: 150,
+            caption: "Munkatípus",
+        },
+        {
+            dataField: "muszmunka_datum",
+            width: 150,
+            caption: "Időpontja",
+            dataType: "date",
+            format: "yyyy-MM-dd",
+        },
+        {
+            dataField: "megjegyzes",
+            width: 400,
+            caption: "Megjegyzés",
+        },
+        {
+            dataField: "muszer_id",
+            width: 120,
+            caption: "Műszer.Id",
+            dataType: "number",
+        },
+        {
+            dataField: "munka_id",
+            width: 120,
+            caption: "Munka Id",
+            dataType: "number",
+        },
+    	 {
+		    caption: "Művelet",
+			width: 120,
+            alignment: 'center',
+            cellTemplate: function (container, options) {
+                $('<a/>').addClass('dx-link')
+                    .text('Dokumentumok')
+                    .on('dxclick', function () {
+                        var currentRow=$(this).closest("tr");
+                        var muszMunkaId = currentRow.find("td:eq(9)").text();
+                        window.open('/doc/muszermunkak/' + muszMunkaId + '/0/doclist/', '_blank');
+                    })
+                    .appendTo(container);
+                }
+        },
+        ],
+        onSelectionChanged: function (selectedItems) {
+            var data = selectedItems.selectedRowsData[0];
+        }
+    }).dxDataGrid('instance');
+
+});
+
+</script>
 {% endblock %}
