--- a/szabalyozok/templates/szabalyozok/szabmunkak_edit.html
+++ b/szabalyozok/templates/szabalyozok/szabmunkak_edit.html
@@ -5,7 +5,7 @@
 
 <h3 style="margin-left:40px;">Szabályozó munka szerkesztés</h3><br>
 
-<div style="margin-left:40px;" class="col-md-8">
+<div class="col-md-10">
     {% load widget_tweaks %}
     <form method="POST" class="form-horizontal" role="form">
         {% csrf_token %}
