--- a/szabalyozok/templates/szabalyozok/terkep.html
+++ b/szabalyozok/templates/szabalyozok/terkep.html
@@ -26,7 +26,7 @@
     </style>
     {% load staticfiles %}
     <script src="{% static 'szabalyozok/scripts/jquery-1.3.2.js' %}"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCbJemp5eDWNNbZ_-Ce_ZR0yd6cNiSnLgA"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?client=gme-tigazzrt"></script>
     <script type="text/javascript">
 
             //----- alaptérkép inícializálás -----
@@ -63,7 +63,7 @@
                     url += "?REQUEST=GetMap";
                     url += "&SERVICE=WMS";
                     url += "&VERSION=1.1.0";
-                    url += "&LAYERS=" + "ekozmu:sz1";
+                    url += "&LAYERS=" + "ekozmu:sz1_wms";
                     url += "&FORMAT=image/png";
                     url += "&TRANSPARENT=TRUE";
 
